--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Marc S. Boxberg"
-  avatar           : "profile.png"
+  avatar           : "Photo-2019-02-05-10-58-55_5343.JPG"
   bio              : "Postdoctoral researcher in Geophysics"
   location         : "Aachen, Germany"
   employer         : "RWTH Aachen University"
