--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Dr. Marc S. Boxberg"
   avatar           : "Photo-2019-02-05-10-58-55_5343.JPG"
-  bio              : "Postdoctoral researcher in Geophysics"
+  bio              : "Postdoctoral researcher at RWTH Aachen University working on icy moon exploration"
   location         : "Aachen, Germany"
-  employer         : "RWTH Aachen University"
+  employer         : 
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=SvH4YNcAAAAJ"
   email            :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/marc-boxberg-89188b152/"
   orcid            : "http://orcid.org/0000-0002-8538-4650"
   pinterest        :
   soundcloud       :
@@ -112,7 +112,7 @@ author:
   twitter          : "marcb109"
   vine             :
   weibo            :
-  xing             :
+  xing             : "https://www.xing.com/profile/MarcS_Boxberg"
   youtube          :
   wikipedia        :
 
