--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/marc-boxberg-89188b152/"
+  linkedin         : "marc-boxberg-89188b152"
   orcid            : "http://orcid.org/0000-0002-8538-4650"
   pinterest        :
   soundcloud       :
@@ -112,7 +112,7 @@ author:
   twitter          : "marcb109"
   vine             :
   weibo            :
-  xing             : "https://www.xing.com/profile/MarcS_Boxberg"
+  xing             : "MarcS_Boxberg"
   youtube          :
   wikipedia        :
 
