--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Marc S. Boxberg"
 description              : &description "PostDoc at RWTH Aachen University"
 url                      : https://marcb109.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "marcb109/marcb109.github.io"
+repository               : "mboxberg/mboxberg.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
