--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Marc S. Boxberg"
 title_separator          : "-"
 name                     : &name "Marc S. Boxberg"
 description              : &description "PostDoc at RWTH Aachen University"
-url                      : https://marcb109.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://mboxberg.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "mboxberg/mboxberg.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
