Added new YouTube Channel Link

--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             : "MarcS_Boxberg"
-  youtube          :
+  youtube          : "https://www.youtube.com/channel/UCcRZUBpElsI-mMDahl9Gojg"
   wikipedia        :
 
 
