Update LinkedIn Link

--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "dr-marc-s-boxberg-89188b152"
+  linkedin         : "marc-s-boxberg"
   orcid            : "http://orcid.org/0000-0002-8538-4650"
   pinterest        :
   soundcloud       :
