Update publications and profile image

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Marc S. Boxberg"
-  avatar           : "Photo-2019-02-05-10-58-55_5343.JPG"
+  avatar           : "230904-MBD-1256_crop.jpg"
   bio              : "Postdoctoral researcher at RWTH Aachen University working on icy moon exploration"
   location         : "Aachen, Germany"
   employer         : 
